Add dockerfile for local build.

--- a/files/dfl-kmod.conf
+++ b/files/dfl-kmod.conf
@@ -4,10 +4,10 @@
 export GODEBUG=x509ignoreCN=0
 
 KMOD_CONTAINER_BUILD_CONTEXT="https://github.com/rmr-silicom/machine-config-kmod.git"
-KMOD_CONTAINER_BUILD_FILE=Dockerfile.fedora33
+KMOD_CONTAINER_BUILD_FILE=/etc/kvc/Dockerfile.fedora33
 KVC_KVER=5.10.12-200.fc33.x86_64
 KMOD_REPOS=docker.silicom.dk:5000
 KVC_SOFTWARE_NAME=${KMOD_REPOS}/dfl-kmod
 KMOD_SOFTWARE_VERSION=eea9cbc
-KMOD_NAMES="dfl-pci dfl-afu dfl"
+KMOD_NAMES="dfl-pci dfl-afu dfl-fme n5010-phy"
 IMAGE=${KVC_SOFTWARE_NAME}-${KMOD_SOFTWARE_VERSION}:${KVC_KVER}
