--- a/files/dfl-kmod.conf
+++ b/files/dfl-kmod.conf
@@ -5,9 +5,10 @@ export GODEBUG=x509ignoreCN=0
 
 KMOD_CONTAINER_BUILD_CONTEXT="https://github.com/rmr-silicom/machine-config-kmod.git"
 KMOD_CONTAINER_BUILD_FILE=/etc/kvc/Dockerfile.fedora33
-KVC_KVER=5.10.12-200.fc33.x86_64
+KVC_KVER=$(uname -r)
 KMOD_REPOS=docker.silicom.dk:5000
-KVC_SOFTWARE_NAME=${KMOD_REPOS}/dfl-kmod
+KVC_SOFTWARE_NAME=dfl-kmod
 KMOD_SOFTWARE_VERSION=eea9cbc
-KMOD_NAMES="dfl-pci dfl-afu dfl-fme n5010-phy"
+KMOD_NAMES="dfl-pci dfl-afu dfl-fme dfl intel-m10-bmc intel-s10-phy"
+# KMOD_NAMES="dfl-pci dfl-afu dfl-fme dfl intel-m10-bmc intel-s10-phy intel-m10-bmc intel-m10-bmc-secure regmap-indirect-register intel-m10-bmc-hwmon n5010-phy"
 IMAGE=${KVC_SOFTWARE_NAME}-${KMOD_SOFTWARE_VERSION}:${KVC_KVER}
