The REPOS and build system will work on both target and build machine.

--- a/files/dfl-kmod.conf
+++ b/files/dfl-kmod.conf
@@ -6,7 +6,7 @@ export GODEBUG=x509ignoreCN=0
 KMOD_CONTAINER_BUILD_CONTEXT="https://github.com/rmr-silicom/machine-config-kmod.git"
 KMOD_CONTAINER_BUILD_FILE=/etc/kvc/Dockerfile.fedora33
 KVC_KVER=$(uname -r)
-KMOD_REPOS=docker.silicom.dk:5000
+KMOD_REPOS=quay.io/ryan_raasch
 KVC_SOFTWARE_NAME=dfl-kmod
 KMOD_SOFTWARE_VERSION=eea9cbc
 KMOD_NAMES="dfl-pci dfl-afu dfl-fme dfl intel-m10-bmc intel-s10-phy"
