--- a/files/dfl-kmod.conf
+++ b/files/dfl-kmod.conf
@@ -9,6 +9,5 @@ KVC_KVER=$(uname -r)
 KMOD_REPOS=quay.io/ryan_raasch
 KVC_SOFTWARE_NAME=dfl-kmod
 KMOD_SOFTWARE_VERSION=eea9cbc
-KMOD_NAMES="dfl-pci dfl-afu dfl-fme dfl intel-m10-bmc intel-s10-phy"
-# KMOD_NAMES="dfl-pci dfl-afu dfl-fme dfl intel-m10-bmc intel-s10-phy intel-m10-bmc intel-m10-bmc-secure regmap-indirect-register intel-m10-bmc-hwmon n5010-phy"
+KMOD_NAMES="dfl-pci dfl-afu dfl-fme dfl intel-m10-bmc intel-s10-phy regmap-indirect-register intel-m10-bmc-hwmon intel-m10-bmc-secure n5010-phy"
 IMAGE=${KVC_SOFTWARE_NAME}-${KMOD_SOFTWARE_VERSION}:${KVC_KVER}
