--- a/files/dfl-kmod.conf
+++ b/files/dfl-kmod.conf
@@ -3,11 +3,19 @@
 # framework.
 export GODEBUG=x509ignoreCN=0
 
+source /etc/os-release
+
 KMOD_CONTAINER_BUILD_CONTEXT="https://github.com/rmr-silicom/machine-config-kmod.git"
-KMOD_CONTAINER_BUILD_FILE=/etc/kvc/Dockerfile.fedora33
-KVC_KVER=$(uname -r)
+KMOD_CONTAINER_BUILD_FILE=/etc/kvc/Dockerfile.centos
+
+KVC_KVER="4.18.0-193.el8.x86_64"
+CENTOS_VER=docker.io/centos:8.2.2004
+if [ $RHEL_VERSION = "8.3" ] ; then
+    KVC_KVER="4.18.0-240.el8.x86_64"
+    CENTOS_VER=docker.io/centos:8.3.2011
+fi
 KMOD_REPOS=quay.io/ryan_raasch
 KVC_SOFTWARE_NAME=dfl-kmod
-KMOD_SOFTWARE_VERSION=eea9cbc
+KMODVER=eea9cbc
 KMOD_NAMES="dfl-pci dfl-afu dfl-fme dfl intel-m10-bmc intel-s10-phy regmap-indirect-register intel-m10-bmc-hwmon intel-m10-bmc-secure n5010-phy"
-IMAGE=${KVC_SOFTWARE_NAME}-${KMOD_SOFTWARE_VERSION}:${KVC_KVER}
+IMAGE=${KVC_SOFTWARE_NAME}:${KMODVER}-${KVC_KVER}
