Created blacklist folder.

--- a/files/dfl-kmod.conf
+++ b/files/dfl-kmod.conf
@@ -17,5 +17,24 @@ fi
 KMOD_REPOS=quay.io/ryan_raasch
 KVC_SOFTWARE_NAME=dfl-kmod
 KMODVER=eea9cbc
-KMOD_NAMES="dfl-pci dfl-afu dfl-fme dfl intel-m10-bmc intel-s10-phy regmap-indirect-register intel-m10-bmc-hwmon intel-m10-bmc-secure n5010-phy"
+KMOD_NAMES="regmap-indirect-register
+            regmap-spi-avmm \
+            dfl-pci \
+            dfl-afu \
+            dfl-fme \
+            dfl \
+            dfl-spi-altera \
+            dfl-fme-br \
+            dfl-fme-region \
+            dfl-intel-s10-iopll \
+            fpga-mgr \
+            fpga_bridge \
+            ifpga-sec-mgr  \
+            intel-m10-bmc \
+            intel-s10-phy \
+            intel-m10-bmc-hwmon \
+            intel-m10-bmc-secure \
+            n5010-phy \
+            n5010_hssi \
+            s10hssi"
 IMAGE=${KVC_SOFTWARE_NAME}:${KMODVER}-${KVC_KVER}
