Added extra modules and got lib to build correctly.

--- a/files/dfl-kmod.conf
+++ b/files/dfl-kmod.conf
@@ -9,10 +9,12 @@ KMOD_CONTAINER_BUILD_CONTEXT="https://github.com/rmr-silicom/machine-config-kmod
 KMOD_CONTAINER_BUILD_FILE=/etc/kvc/Dockerfile.centos
 
 KVC_KVER="4.18.0-193.el8.x86_64"
+RHEL_RPM=https://vault.centos.org/8.2.2004/BaseOS/x86_64/os/Packages/kernel-devel-4.18.0-193.el8.x86_64.rpm
 CENTOS_VER=docker.io/centos:8.2.2004
 if [ $RHEL_VERSION = "8.3" ] ; then
     KVC_KVER="4.18.0-240.el8.x86_64"
     CENTOS_VER=docker.io/centos:8.3.2011
+    RHEL_RPM=http://mirror.centos.org/centos/8/BaseOS/x86_64/os/Packages/kernel-devel-4.18.0-240.el8.x86_64.rpm
 fi
 KMOD_REPOS=quay.io/ryan_raasch
 KVC_SOFTWARE_NAME=dfl-kmod
@@ -29,12 +31,12 @@ KMOD_NAMES="regmap-indirect-register
             dfl-intel-s10-iopll \
             fpga-mgr \
             fpga_bridge \
-            ifpga-sec-mgr  \
             intel-m10-bmc \
             intel-s10-phy \
             intel-m10-bmc-hwmon \
             intel-m10-bmc-secure \
             n5010-phy \
             n5010_hssi \
-            s10hssi"
+            s10hssi \
+            spi-altera"
 IMAGE=${KVC_SOFTWARE_NAME}:${KMODVER}-${KVC_KVER}
