Fixed last kernel module load.

--- a/files/dfl-kmod.conf
+++ b/files/dfl-kmod.conf
@@ -36,7 +36,7 @@ KMOD_NAMES="regmap-indirect-register
             intel-m10-bmc-hwmon \
             intel-m10-bmc-secure \
             n5010-phy \
-            n5010_hssi \
+            n5010-hssi \
             s10hssi \
             spi-altera"
 IMAGE=${KVC_SOFTWARE_NAME}:${KMODVER}-${KVC_KVER}
