Added one more driver to list.

--- a/files/dfl-kmod.conf
+++ b/files/dfl-kmod.conf
@@ -27,6 +27,7 @@ KMOD_NAMES="regmap-indirect-register
             dfl \
             dfl-spi-altera \
             dfl-fme-br \
+            dfl-fme-mgr \
             dfl-fme-region \
             dfl-intel-s10-iopll \
             fpga-mgr \
