--- a/files/registries.conf
+++ b/files/registries.conf
@@ -1,1 +1,1 @@
-unqualified-search-registries = ['registry.access.redhat.com', 'docker.io', 'docker.silicom.dk:5000']
+unqualified-search-registries = ['registry.access.redhat.com', 'docker.io', 'quay.io', 'docker.silicom.dk:5000']
