--- a/Dockerfile.fedora33
+++ b/Dockerfile.fedora33
@@ -36,3 +36,6 @@ FROM registry.access.redhat.com/ubi8/ubi-minimal
 RUN microdnf install kmod
 RUN mkdir -p /lib/modules/${KVER}
 COPY --from=0 /lib/modules/${KVER} /lib/modules/${KVER}
+ADD files/dfl* /files/
+ADD files/blacklist /files/
+ADD files/insmod-drivers.sh /files/
