--- a/files/dfl-kmod.conf
+++ b/files/dfl-kmod.conf
@@ -11,12 +11,12 @@ KMOD_CONTAINER_BUILD_FILE=/etc/kvc/Dockerfile.centos
 KVC_KVER="4.18.0-193.el8.x86_64"
 RHEL_RPM=https://vault.centos.org/8.2.2004/BaseOS/x86_64/os/Packages/kernel-devel-4.18.0-193.el8.x86_64.rpm
 CENTOS_VER=docker.io/centos:8.2.2004
-if [ $RHEL_VERSION = "8.3" ] ; then
+if [ "$RHEL_VERSION" = "8.3" ] ; then
     KVC_KVER="4.18.0-240.el8.x86_64"
     CENTOS_VER=docker.io/centos:8.3.2011
     RHEL_RPM=http://mirror.centos.org/centos/8/BaseOS/x86_64/os/Packages/kernel-devel-4.18.0-240.el8.x86_64.rpm
 fi
-KMOD_REPOS=quay.io/ryan_raasch
+KMOD_REPOS=ryan_raasch
 KVC_SOFTWARE_NAME=dfl-kmod
 KMODVER=eea9cbc
 KMOD_NAMES="regmap-indirect-register
